# linear-regressions

./: README.md  pyproject.toml
.ipynb_checkpoints/: regression-checkpoint.ipynb
